--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,5 +10,17 @@
 
 <%= yield %>
 
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3">
+        <%= link_to "Sign up now!", new_user_registration_path %>
+        <%= link_to "Sign in!", new_user_session_path %>
+        <%= link_to "Live feed!", users_index_path %>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
+
+
